# camera_example

./: CLAUDE.md  monitor_script.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  index.html  prvtkey.pem  servercert.pem  take_picture.c  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
